--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "react-context-cryptodash",
   "version": "0.1.0",
   "private": true,
+  "author": "atorov",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/atorov/react-context-cryptodash.git"
+  },
+  "homepage": ".",
+  "license": "MIT",
   "dependencies": {
     "cryptocompare": "^1.0.0",
     "fuzzy": "^0.1.3",
