code refactoring and final polishing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "cryptocompare",
+        "cryptocurrency",
         "deletable",
         "highcharts",
         "minmax",
